# Asteroid

./: CMakeLists.txt
client/: CLIENT_GraphiqueSDL2_et_Affichable.cpp  affichable.h  affichableClient.h  alphaNumClient.h  client.cpp  client.h  client_message_factory.h  graphiqueSDL.h  main.cpp  polyClient.h  polyServeur.h  rest_client.cpp
client_sources/: asteroid_client.cpp  main.cpp  rest_client.cpp
client_sources/headers/: affichable.h  alphaNumClient.h  client_http_service_handler.h  client_message_factory.h  game_shapes.h  graphiqueSDL.h  point.h  polyClient.h  polygone.h  rest_client.h
my_libs/: CMakeLists.txt
server/: games_scheduler.h  http_service_handler.h  main.cpp  server_http_service_handler.h  stdafx.h
server_sources/: asteroid_server.cpp  game_scheduler.cpp  main.cpp  rest_server.cpp  vaisseau.cpp  vec2d.cpp
server_sources/headers/: asteroid.h  game.h  game_scheduler.h  grandAsteroid.h  intersection.h  laser.h  moyenAsteroid.h  petitAsteroid.h  polyServeur.h  rest_server.h  server_http_service_handler.h  vaisseau.h  vec2.h  vec2d.h
shared_sources/headers/: param.h  polygone.h  vec2.h
